--- a/express/package.json
+++ b/express/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^1.3.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "openai": "^3.2.1"
   }
 }
