--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "chatbot-test",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^1.3.5",
     "kafkajs": "^2.2.4",
+    "openai": "^3.2.1",
     "react": "^16.13.1",
     "react-chatbot-kit": "1.0.5",
     "react-dom": "^16.13.1",
